--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,30 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-  @apply bg-gradient-to-tl from-yellow-100 via-cyan-500 to-lime-100
+  @apply bg-gradient-to-tl from-yellow-100 via-cyan-500 to-lime-100;
 }
 
-  @font-face {
-    font-family: 'acorn';
-    src: url('../font/acorn/Acorn-Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  .acorn {
-    font-family: 'acorn', sans-serif;
-    font-weight: 700; /* Sesuaikan dengan berat font yang diinginkan */
-    font-style: normal;
-    color: #f1f1e1;
-    line-height: 90px;
-    font-size: 80px;
-  }
-  .fredoka {
-    font-family: "Fredoka", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400; /* Pilih berat font yang sesuai */
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-  }
-  
+@font-face {
+  font-family: "acorn";
+  src: url("../font/acorn/Acorn-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+.acorn {
+  font-family: "acorn", sans-serif;
+  font-weight: 700; /* Sesuaikan dengan berat font yang diinginkan */
+  font-style: normal;
+  color: #f1f1e1;
+  line-height: 90px;
+  font-size: 80px;
+}
+.acorn500 {
+  font-family: "acorn", sans-serif;
+  font-weight: 500; /* Sesuaikan dengan berat font yang diinginkan */
+  font-style: normal;
+}
+.fredoka {
+  font-family: "Fredoka", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Pilih berat font yang sesuai */
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+.glass {
+  /* From https://css.glass */
+  background: #f1f1e1;
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(1.7px);
+  -webkit-backdrop-filter: blur(1.7px);
+  border: 1px solid #f1f1e1;
+}
