update projek utama

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -34,10 +34,28 @@ body {
 }
 .glass {
   /* From https://css.glass */
-  background: #f1f1e1;
   border-radius: 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(1.7px);
   -webkit-backdrop-filter: blur(1.7px);
   border: 1px solid #f1f1e1;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1e1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #255BA6;
+  border-radius: 5px;
+  border-width: 1px;
+}
+
+/* Handle on hover */
+
